--- a/index.html
+++ b/index.html
@@ -1483,101 +1483,44 @@ googleLoginBtn.addEventListener('click', ()=>{
 logoutBtn.addEventListener('click', ()=> auth.signOut());
    
 
+// auth 상태에서 로그인 시 호출
 auth.onAuthStateChanged(async user => {
   if (user) {
-    googleLoginBtn.style.display = 'none';
-    logoutBtn.style.display = 'block';
-    userInfo.textContent = user.displayName || user.email || '';
+    // 3대 기록 기존 로직 그대로
 
-    /* 3대 최신값 */
-    try {
-      const threeSnap = await db
-        .collection('users')
-        .doc(user.uid)
-        .collection('threeRM')
-        .orderBy('createdAt', 'desc')
-        .limit(1)
-        .get();
+    // 🔥 records 실시간 반영
+    db.collection('users')
+      .doc(user.uid)
+      .collection('records')
+      .orderBy('createdAt', 'desc')
+      .onSnapshot(snapshot => {
+        // 배열 초기화
+        records.bench = [];
+        records.squat = [];
+        records.dead = [];
 
-      if (!threeSnap.empty) {
-        const data = threeSnap.docs[0].data();
-        benchRM.value = data.bench || 0;
-        squatRM.value = data.squat || 0;
-        deadRM.value = data.dead || 0;
-        updateTotal3();
-      }
-    } catch (e) {
-      console.error('load threeRM err', e);
-    }
+        snapshot.forEach(doc => {
+          const d = doc.data();
+          if (!d || !d.lift) return;
 
-    /* records */
-    try {
-      const snap = await db
-        .collection('users')
-        .doc(user.uid)
-        .collection('records')
-        .orderBy('createdAt', 'desc')
-        .limit(200)
-        .get();
+          const item = {
+            firestoreId: doc.id,
+            date: d.date,
+            weight: d.weight,
+            reps: d.reps,
+            createdAt: d.createdAt?.toMillis?.() || 0
+          };
 
-      records.bench = [];
-      records.squat = [];
-      records.dead = [];
+          if (d.lift === 'bench') records.bench.push(item);
+          if (d.lift === 'squat') records.squat.push(item);
+          if (d.lift === 'dead')  records.dead.push(item);
+        });
 
-      snap.forEach(doc => {
-        const d = doc.data();
-        if (!d || !d.lift) return;
-
-        const item = {
-          firestoreId: doc.id,
-          date: d.date,
-          weight: d.weight,
-          reps: d.reps,
-          createdAt: d.createdAt?.toMillis?.() || 0
-        };
-
-        if (d.lift === 'bench') records.bench.push(item);
-        if (d.lift === 'squat') records.squat.push(item);
-        if (d.lift === 'dead') records.dead.push(item);
+        renderActiveBox(); // 화면 갱신
       });
-
-      renderActiveBox();
-    } catch (e) {
-      console.error('load records err', e);
-    }
-
-    /* 🔥 달력 데이터 로드 */
-    try {
-      const snap = await db
-        .collection("users")
-        .doc(user.uid)
-        .collection("calendar")
-        .get();
-
-      calData = {};
-      snap.forEach(doc => {
-        calData[doc.id] = doc.data();
-      });
-
-      calRender();
-    } catch (e) {
-      console.error("calendar load error", e);
-    }
-
-    // 로그인 후 첫 종목 자동 선택
-    const firstExercise = Object.keys(accRecordsByExercise)[0];
-    if (firstExercise) {
-      currentExerciseName = firstExercise;
-      await loadAccessorySets(currentExerciseName);
-    }
-
-  } else {
-    // user가 없을 때 처리
-    googleLoginBtn.style.display = 'block';
-    logoutBtn.style.display = 'none';
-    userInfo.textContent = '';
   }
 });
+
 
 
 
