--- a/index.html
+++ b/index.html
@@ -1335,9 +1335,7 @@ async function loadRecordsFromFirestore(user){
   renderActiveBox(); // 🔥 화면 갱신
 }
 
-   
-/* 기록 박스 데이터 (로컬 mock) 및 렌더 함수 */
-const records = { bench: [], squat: [], dead: [] };
+
 
 // 포맷 날짜: '25.12.10'
 function formatTodayYYMMDD(d = new Date()){
@@ -1350,128 +1348,10 @@ function formatTodayYYMMDD(d = new Date()){
 // 초기 날짜 표시
 recordDate.value = formatTodayYYMMDD();
 
-// 렌더 함수: 현재 active folder의 목록을 그려줌
-function renderActiveBox(){
-    const activeBtn = document.querySelector('.folderBtn.active');
-    const target = activeBtn ? activeBtn.dataset.target : 'benchBox';
-    let arr = [];
-    if(target === 'benchBox') arr = records.bench;
-    else if(target === 'squatBox') arr = records.squat;
-    else if(target === 'deadBox') arr = records.dead;
 
-    const boxEl = document.getElementById(target);
-if(!arr || arr.length === 0){
-    boxEl.innerHTML = `<div style="color:#777;font-size:13px;">기록이 여기에 쌓입니다</div>`;
-    return;
-}
-
-// 날짜별 그룹화
-const grouped = {};
-arr.forEach(it => {
-  if (!grouped[it.date]) grouped[it.date] = [];
-  grouped[it.date].push(it);
-});
-
-// 최신 날짜 먼저
-const dates = Object.keys(grouped)
-  .sort((a, b) => b.localeCompare(a)); // 🔥 최신 날짜 먼저
-
-
-boxEl.innerHTML = dates.map(date => {
- const records = grouped[date]
-  .slice()
-  .reverse(); // 🔥 배열순서 역순 = 최신이 아래
-
-
-
-  return `
-    <div style="margin-bottom:10px;">
-      ${records.map((r, idx) => `
-        <div style="display:flex; line-height:1.6;">
-          <div style="width:90px;">
-            ${idx === 0 ? date : ''}
-          </div>
-          <div
-                 class="record-line"
-                 
-                 data-id="${r.firestoreId || r.localId}"
-                 style="margin-left:auto; text-align:right; cursor:pointer;"
-                  >
-                 ${r.weight}kg × ${r.reps}회
-            </div>
-
-        </div>
-      `).join('')}
-      <div style="border-bottom:1px solid rgba(255,255,255,0.25); margin-top:6px;"></div>
-    </div>
-  `;
-}).join('');
-
-
-
-}
 renderActiveBox();
 
-/* 기록 추가 (가로 폼에서 저장) */
-recordAdd.addEventListener('click', async ()=>{
-    console.log("🔥 저장 버튼 클릭됨");
-    const weight = parseInt(recordWeight.value);
-    const reps = parseInt(recordReps.value);
 
-    if(!weight || !reps){
-        fadeTempMsg(recordMessage, '무게와 횟수를 입력하세요', 900, 600);
-        return;
-    }
-
-    const date = formatTodayYYMMDD();
-
-    const activeBtn = document.querySelector('.folderBtn.active');
-    const target = activeBtn ? activeBtn.dataset.target : 'benchBox';
-
-    const lift =
-      target === 'benchBox' ? 'bench' :
-      target === 'squatBox' ? 'squat' :
-      'dead';
-
-    const item = {
-        firestoreId: null,
-       localId: Date.now() + Math.random(), // 🔥 추가
-        date,
-        weight,
-        reps
-    };
-
-if(lift === 'bench') records.bench.unshift(item);
-if(lift === 'squat') records.squat.unshift(item);
-if(lift === 'dead')  records.dead.unshift(item);
-
-    recordWeight.value = '';
-    recordReps.value = '';
-    fadeTempMsg(recordMessage, '기록 추가 완료', 700, 600);
-    renderActiveBox();
-
-    const user = auth.currentUser;
-    if(user){
-        try{
-            const docRef = await db
-              .collection('users')
-              .doc(user.uid)
-              .collection('records')
-              .add({
-                lift,
-                date,
-                weight,
-                reps,
-                createdAt: firebase.firestore.FieldValue.serverTimestamp()
-              });
-
-            item.firestoreId = docRef.id;
-           
-        }catch(e){
-            console.error('Firestore add err', e);
-        }
-    }
-});
 
 
 
@@ -1846,29 +1726,7 @@ document.addEventListener("touchmove", () => {
 
 
    
-async function deleteRecord(id){
-  if(!id) return;
 
-  ["bench","squat","dead"].forEach(type=>{
-    records[type] = records[type].filter(r =>
-      r.firestoreId !== id && r.localId !== id
-    );
-  });
-
-  renderActiveBox();
-
-  const user = auth.currentUser;
-  if(user && String(id).length > 10){ // firestoreId일 때만
-
-
-    await db
-      .collection('users')
-      .doc(user.uid)
-      .collection('records')
-      .doc(id)
-      .delete();
-  }
-}
 
 
 
@@ -2494,6 +2352,139 @@ async function loadAccessoryRecordsFromDB(user){
   }
 }
 
+const records = { bench: [], squat: [], dead: [] };
+
+const user = auth.currentUser;
+if(user){
+  const recordsRef = db.collection('users').doc(user.uid).collection('records');
+
+  // 🔥 실시간 리스너
+  recordsRef.orderBy('createdAt', 'desc').onSnapshot(snapshot => {
+    records.bench = [];
+    records.squat = [];
+    records.dead = [];
+
+    snapshot.forEach(doc => {
+      const d = doc.data();
+      if(!d.lift) return;
+      const item = {
+        firestoreId: doc.id,
+        date: d.date,
+        weight: d.weight,
+        reps: d.reps,
+        createdAt: d.createdAt?.toMillis?.() || 0
+      };
+      if(d.lift === 'bench') records.bench.push(item);
+      if(d.lift === 'squat') records.squat.push(item);
+      if(d.lift === 'dead') records.dead.push(item);
+    });
+
+    renderActiveBox(); // 🔥 화면 갱신
+  });
+}
+
+// 기록 추가
+recordAdd.addEventListener('click', async ()=>{
+  const weight = parseInt(recordWeight.value);
+  const reps = parseInt(recordReps.value);
+  if(!weight || !reps){
+    fadeTempMsg(recordMessage, '무게와 횟수를 입력하세요', 900, 600);
+    return;
+  }
+
+  const date = formatTodayYYMMDD();
+  const activeBtn = document.querySelector('.folderBtn.active');
+  const target = activeBtn ? activeBtn.dataset.target : 'benchBox';
+  const lift = target === 'benchBox' ? 'bench' : target === 'squatBox' ? 'squat' : 'dead';
+
+  // Firestore 저장
+  const user = auth.currentUser;
+  if(user){
+    try{
+      const docRef = await db.collection('users')
+        .doc(user.uid)
+        .collection('records')
+        .add({
+          lift,
+          date,
+          weight,
+          reps,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+
+      // 로컬 배열에도 추가
+      const item = { firestoreId: docRef.id, date, weight, reps };
+      if(lift === 'bench') records.bench.unshift(item);
+      if(lift === 'squat') records.squat.unshift(item);
+      if(lift === 'dead') records.dead.unshift(item);
+
+      recordWeight.value = '';
+      recordReps.value = '';
+      fadeTempMsg(recordMessage, '기록 추가 완료', 700, 600);
+
+      renderActiveBox(); // 화면 갱신
+    }catch(e){
+      console.error('Firestore add err', e);
+    }
+  }
+});
+
+// 기록 삭제
+async function deleteRecord(id){
+  if(!id) return;
+  ["bench","squat","dead"].forEach(type=>{
+    records[type] = records[type].filter(r => r.firestoreId !== id);
+  });
+  renderActiveBox();
+
+  const user = auth.currentUser;
+  if(user && String(id).length > 10){
+    await db.collection('users').doc(user.uid).collection('records').doc(id).delete();
+  }
+}
+
+// 렌더링 함수 (활성 폴더 기준)
+function renderActiveBox(){
+  const activeBtn = document.querySelector('.folderBtn.active');
+  const target = activeBtn ? activeBtn.dataset.target : 'benchBox';
+  let arr = [];
+  if(target === 'benchBox') arr = records.bench;
+  else if(target === 'squatBox') arr = records.squat;
+  else if(target === 'deadBox') arr = records.dead;
+
+  const boxEl = document.getElementById(target);
+  if(!arr || arr.length === 0){
+    boxEl.innerHTML = `<div style="color:#777;font-size:13px;">기록이 여기에 쌓입니다</div>`;
+    return;
+  }
+
+  // 날짜별 그룹화
+  const grouped = {};
+  arr.forEach(it => {
+    if(!grouped[it.date]) grouped[it.date] = [];
+    grouped[it.date].push(it);
+  });
+
+  // 최신 날짜 먼저
+  const dates = Object.keys(grouped).sort((a,b)=>b.localeCompare(a));
+
+  boxEl.innerHTML = dates.map(date=>{
+    const records = grouped[date].slice().reverse(); // 최신 아래
+    return `
+      <div style="margin-bottom:10px;">
+        ${records.map((r, idx)=>`
+          <div style="display:flex; line-height:1.6;">
+            <div style="width:90px;">${idx===0 ? date : ''}</div>
+            <div class="record-line" data-id="${r.firestoreId}" style="margin-left:auto; text-align:right; cursor:pointer;">
+              ${r.weight}kg × ${r.reps}회
+            </div>
+          </div>
+        `).join('')}
+        <div style="border-bottom:1px solid rgba(255,255,255,0.25); margin-top:6px;"></div>
+      </div>
+    `;
+  }).join('');
+}
 
 
 
