--- a/index.html
+++ b/index.html
@@ -1174,6 +1174,20 @@ function closeExerciseDetail(){
   document.getElementById('exercise-detail-screen').style.display = 'none';
 }
 
+// 1️⃣ 최상단에서 기록 배열 선언
+const records = { bench: [], squat: [], dead: [] };
+
+// 2️⃣ renderActiveBox 정의
+function renderActiveBox() {
+  // records 사용
+}
+
+// 3️⃣ Firestore onSnapshot 설정
+db.collection('users').doc(user.uid).collection('records')
+  .onSnapshot(snapshot => {
+    // records 채움
+    renderActiveBox(); // 초기 렌더링
+});
 
 
 
